# RoboLab

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIForwarding.txt  README.md  THIRD_PARTY_NOTICES.md  ToDo.txt  angledreach_err.py  angledreach_error_summary.csv  angledreach_statistics.py  clean_concatenated_hdf5.py  eval_summary.py  notes.txt  pyproject.toml  reach_eval_summary.py
analysis/: read_results.py  summarize_eval_success.py
assets/backgrounds/: README.md  backgrounds.json
assets/backgrounds/_utils/: generate_background_table.py
assets/backgrounds/indoors/: hotel_room_4k.hdr  hotel_room_4k.txt  machine_shop_01_4k.hdr  machine_shop_01_4k.txt  small_hangar_01_4k.hdr  small_hangar_01_4k.txt  tv_studio_4k.txt
assets/objects/_utils/: README.md
assets/wm_tasks/AngledPickupAngledHomeKetchupTask/: status.json
assets/wm_tasks/AngledPickupCartoon2Task/: status_draft.json
assets/wm_tasks/AngledPickupKetchupTask/: status.json  status_draft.json
assets/wm_tasks/AngledReach/: status_draft.json
assets/wm_tasks/AngledReachCartoon2Task/: status.json
assets/wm_tasks/AngledReachCartoonTask/: status.json  status_draft.json
assets/wm_tasks/AngledReachDragontailTask/: status.json
assets/wm_tasks/AngledReachDrillTask/: status.json  status_draft.json
assets/wm_tasks/AngledReachKetchupTask/: status.json
assets/wm_tasks/AngledReachMilkCartonTask/: status.json
assets/wm_tasks/AngledReachShelfForkTask/: status_draft.json
assets/wm_tasks/AngledReachShelfTask/: status.json
assets/wm_tasks/ReachAppleDummyTask/: status_draft.json
assets/wm_tasks/ReachAppleTask/: status.json
assets/wm_tasks/ReachBagelTask/: status.json
assets/wm_tasks/ReachBananaTask/: status.json
assets/wm_tasks/ReachCeramicMugTask/: status.json
assets/wm_tasks/ReachCoffeeCanTask/: status.json
assets/wm_tasks/ReachCoffeePotTask/: status.json
assets/wm_tasks/ReachOrangeJuiceCartonTask/: status.json
assets/wm_tasks/ReachOrangeTask/: status.json
assets/wm_tasks/ReachPitcherTask/: status.json
assets/wm_tasks/ReachSpoonBigTask/: status.json
assets/wm_tasks/ReachYogurtCupTask/: status.json
docker/: Apptainer.def  Dockerfile  README.md  build_docker.sh  run_apptainer.sh  run_docker.sh
docker/vulkan-rtx-compat/: VP_RTX_driver_compat_generated.json  VkLayer_KHRONOS_profiles.json  python-rtx-compat
docs/: README.md  analysis.md  background.md  camera.md  dashboard.md  data.md  debug.md  env_vram_size_guide.md  environment_registration.md  environment_run.md  inference.md  known_issues.md  policy.md  replay.md  robots.md  task_conditionals.md
eval_statistics/: angledreach_err.py  angledreach_statistics.py  clean_concatenated_hdf5.py  eval_summary.py  inf_time.py  reach_eval_summary.py
examples/: episodes.py  run_empty.py  run_recorded.py
examples/demo/: came_poses.py  episodes.py  run_empty.py  run_env.py  run_env_interactive.py  run_env_keys.py  run_env_keys_pickup_goals.py  run_pickup_home_goals.py  run_recorded.py
examples/policy/: episode.py  run_angledpickup_dual.sh  run_angledpickup_ind.sh  run_angledpickup_valp_model_sweep.sh  run_angledpickup_valp_model_sweep_224_5x.sh  run_angledpickup_valp_model_sweep_dual.sh  run_angledpickup_valp_model_sweep_ind.sh  run_angledpickup_valpa_model_sweep_dual.sh  run_angledpickup_valpa_model_sweep_ind.sh  run_angledreach_eval.py  run_angledreach_eval_10x.sh  run_angledreach_ind_224_10x.sh  run_angledreach_ind_256_10x.sh  run_angledreach_right_224_10x.sh  run_angledreach_right_256_10x.sh  run_angledreach_valp_eval_10x.sh  run_angledreach_valp_eval_5x.sh  run_angledreach_valp_eval_5x_256.sh  run_angledreach_valp_model_sweep_224_10x.sh  run_angledreach_valp_model_sweep_224_5x.sh  run_angledreach_valp_model_sweep_256_10x.sh  run_angledreach_valp_model_sweep_256_5x.sh  run_angledreach_valpa_224_10x.sh  run_angledreach_valpa_256_10x.sh  run_angledreach_valpa_eval_10x.sh  run_angledreach_valpa_model_sweep_224_10x.sh  run_angledreach_valpa_model_sweep_256_10x.sh  run_angledreach_wrist_224_10x.sh  run_angledreach_wrist_256_10x.sh  run_eval.py  run_eval_angled.py  run_eval_background_variation.py  run_eval_camera_pose_variation.py  run_eval_lighting.py  run_eval_pickup.py  run_eval_table_variation.py  run_reach_eval_10x.sh  run_reach_ind_224_10x.sh  run_reach_ind_256_10x.sh  run_reach_right_224_10x.sh  (+17 more)
examples/recorded_data/RubiksCubeAndBananaTask/: data.hdf5  env_cfg.json
policies/: README.md
policies/gr00t/: README.md  client.py
policies/molmoact2/: __init__.py  client.py  molmoact2_deployment.sh  run.py
policies/pi0_family/: run_background_variation.py  run_camera_pose_variation.py  run_lighting.py  run_table_variation.py
robolab/: constants.py
robolab/core/environments/: base.py  config.py  env.py  factory.py  runtime.py
robolab/core/events/: basic_recorders.py  subtask_recorder.py  utils.py
robolab/core/logging/: recorder_manager.py  results.py  streaming_hdf5_handler.py
robolab/core/metrics/: trajectory_metrics.py
robolab/core/observations/: example.py  observation_utils.py
robolab/core/replay/: __init__.py  env_config.py  scene_state.py
robolab/core/task/: conditionals.py  (+2 more)
robolab/eval/: __init__.py  base_client.py  episode.py  multi_subtasks_episode.py  runner.py  summarize.py
robolab/inference/: valp.py  worldmodel.py
robolab/robots/: droid.py
robolab/tasks/: README.md
robolab/variations/: camera.py
robolab_policy_client/: __init__.py  dreamzero.py  gr00t.py  image_tools.py  pi0_family.py  runtime.py  valp.py  valpa.py
scripts/: check_registered_envs.py
skills/robolab-taskgen/: SKILL.md
tests/: __init__.py  conftest.py  test_hull_check.py  test_isaaclab.py  test_llm_scene_gen_physical_solver.py  test_recorder_export.py  test_recorder_slicing.py  test_registered_envs.py  test_run_empty.py  test_runner_args.py  test_tasks_valid.py
(+75 files in other folders)
